music intergration done. play, add, pause, resume and skip commands

--- a/src/bundledAssets/settings.json
+++ b/src/bundledAssets/settings.json
@@ -10,5 +10,11 @@
   "useDefaultPlaylist": true,
   "shuffleDefaultPlaylist": false,
   "maxLength": 600,
-  "serverPort": 3560
+  "serverPort": 3560,
+
+  "TWITCH_BOT_NAME": "",
+  "TWITCH_BOT_TOKEN": "oauth:",
+  "TWITCH_USER": "",
+  "YOUTUBE_URL": "",
+  "YOUTUBE_API_KEY": ""
 }
