--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "clear": "rm -r build | rm -r dist | rm -r assets | rm settings.json | rm music_artist.txt | rm music_name.txt",
+    "clear": "rm -r build | rm -r dist | rm -r assets | rm settings.json | rm music_artist.txt | rm music_name.txt | rm server.exe | rm win32-x64_lib.node",
     "setup": "ts-node src/install.ts",
     "dev": "nodemon --watch src/**/*.ts -L src/server.ts",
-    "build": "rm -r build | rm -r dist | tsc && pkg build/server.js --target node16-win --out-dir dist && pkg build/install.js  --target node16-win --out-dir dist && rm -r build",
-    "start": "rm -r build | tsc && node build/server.js"
+    "build": "rm -r build | rm -r dist | npx ncc build src/server.ts -o build/server && npx pkg build/server/index.js --target node18-win --out-dir dist/server && mv dist/server/index.exe dist/server/server.exe | npx ncc build src/install.ts -o build/installer && npx pkg build/installer/index.js --target node18-win --out-dir dist/installer && mv dist/installer/index.exe dist/installer/installer.exe | rm -r build"
   },
   "keywords": [],
   "author": "NUB31",
@@ -18,7 +17,9 @@
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.11.3",
     "nodemon": "^2.0.20",
+    "ncc": "^0.3.6",
     "pkg": "^5.8.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
@@ -27,7 +28,7 @@
     "fs-extra": "^10.1.0",
     "moment": "^2.29.4",
     "ntsuspend": "^1.0.2",
-    "socket.io-client": "^4.5.3",
+    "socket.io-client": "^4.5.4",
     "youtube-search": "^1.1.6",
     "ytdl-core": "^4.11.2"
   }
